--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anonymous-zether-monorepo",
+  "name": "@luxdefi/zchain",
   "private": true,
   "version": "0.1.0",
   "description": "",
