Re-organize packages

--- a/packages/zsc/package.json
+++ b/packages/zsc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@anonymous-zether/protocol",
+  "name": "@luxdefi/zsc",
   "version": "0.1.0",
   "description": "",
   "main": "./lib",
